--- a/config/database.yml
+++ b/config/database.yml
@@ -4,11 +4,11 @@ default: &default
   host: localhost
   username: shipment_tracker
   password: password
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
+  pool: 5
   database: shipment_tracker_development
 
 test:
